--- a/Frontend/src/components/navbar/navbar.scss
+++ b/Frontend/src/components/navbar/navbar.scss
@@ -53,6 +53,7 @@ nav {
     justify-content: flex-end;
     background-color: #fcf5f3;
     height: 100%;
+    z-index: 9;
 
     @include md {
       background-color: transparent;
@@ -142,6 +143,7 @@ nav {
 
       &.active {
         right: 0;
+        z-index: 9999;
       }
 
       @include sm {
