comleted frontend data handling of chat functionality

--- a/Frontend/src/routes/singlePage/singlePage.scss
+++ b/Frontend/src/routes/singlePage/singlePage.scss
@@ -213,4 +213,19 @@
       }
     }
   }
+  .chatContainer {
+    flex: 2;
+    background-color: #fcf5f3;
+    height: 100%;
+
+    @include md{
+      flex:none;
+      height: max-content;
+    }
+
+    .wrapper{
+      padding: 0px 20px;
+      height: 100%;
+    }
+  }
 }
